<resources>
    <string name="app_name">RestaurantMng</string>
    <string name="book_your_table">Book Your Table !</string>
    <string name="no_of_guests">No of Guests :</string>
    <string name="phone_number">Phone Number :</string>
    <string name="name">Name:</string>
    <string name="enter_no_of_guests">Enter no of guests</string>
    <string name="time">Time :</string>
    <string name="next">Next</string>
    <string name="book">Book Now</string>
</resources>

